data/derived/comb/progs/unify/prog6074.ml.out
Characters 40-69:
  let rec helper x res n =  if n > 0 then [(helper (x) res (n-1)) ]@res else [];;
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
